--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "main": "./src/index.js",
   "scripts": {
+    "start": "node src/index.js", 
     "test": "jest",
     "test:watch": "jest --watch",
     "dev": "nodemon ./src/index.js"
