--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-MONGO_USER=docker
-MONGO_PASSWORD=docker
-MONGO_DATABASE=casame
+MONGO_INITDB_ROOT_USERNAME=docker
+MONGO_INITDB_ROOT_PASSWORD=docker
+MONGO_INITDB_DATABASE=casame
 MONGO_DB_URL_PRODUCTION=mongodb://docker:docker@mongo:27017/casame?authSource=admin
 MONGO_DB_URL_DEVELOPMENT=mongodb://docker:docker@mongo:27017/casame?authSource=admin
 MONGO_DB_URL_TEST=mongodb://docker:docker@mongo:27017/casame?authSource=admin
