--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,14 @@ MONGO_DB_URL_DEVELOPMENT=mongodb://docker:docker@mongo:27017/casame?authSource=a
 MONGO_DB_URL_TEST=mongodb://docker:docker@mongo:27017/casame?authSource=admin
 BCRYPT_SALT_ROUNDS=
 JWT_SECRET=
+
+FB_CERT_TYPE=
+FB_CERT_PROJECT_ID=
+FB_CERT_PRIVATE_KEY_ID=
+FB_CERT_PRIVATE_KEY=
+FB_CERT_CLIENT_EMAIL=
+FB_CERT_CLIENT_ID=
+FB_CERT_AUTH_URI=
+FB_CERT_TOKEN_URI=
+FB_CERT_AUTH_PROVIDER_X_509_CERT_URL=
+FB_CERT_CLIENT_X_509_CERT_URL=
