--- a/.github/workflows/nodejs.yaml
+++ b/.github/workflows/nodejs.yaml
@@ -30,4 +30,14 @@ jobs:
           BCRYPT_SALT_ROUNDS: 12
           MONGO_DB_URL_DEVELOPMENT: mongodb://docker:docker@mongo:27017/casame?authSource=admin
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          FB_CERT_TYPE: ${{ secrets.FB_CERT_TYPE }}
+          FB_CERT_PROJECT_ID: ${{ secrets.FB_CERT_PROJECT_ID }}
+          FB_CERT_PRIVATE_KEY_ID: ${{ secrets.FB_CERT_PRIVATE_KEY_ID }}
+          FB_CERT_PRIVATE_KEY: ${{ secrets.FB_CERT_PRIVATE_KEY }}
+          FB_CERT_CLIENT_EMAIL: ${{ secrets.FB_CERT_CLIENT_EMAIL }}
+          FB_CERT_CLIENT_ID: ${{ secrets.FB_CERT_CLIENT_ID }}
+          FB_CERT_AUTH_URI: ${{ secrets.FB_CERT_AUTH_URI }}
+          FB_CERT_TOKEN_URI: ${{ secrets.FB_CERT_TOKEN_URI }}
+          FB_CERT_AUTH_PROVIDER_X_509_CERT_URL: ${{ secrets.FB_CERT_AUTH_PROVIDER_X_509_CERT_URL }}
+          FB_CERT_CLIENT_X_509_CERT_URL: ${{ secrets.FB_CERT_CLIENT_X_509_CERT_URL }}
         run: npm run test
