--- a/DockerFile
+++ b/DockerFile
@@ -6,7 +6,11 @@ WORKDIR /app
 
 COPY src /app/src/
 COPY package.json .
+COPY jest.config.js .
+COPY jsconfig.json .
+COPY globalConfig.json .
 
+RUN npm install -g jest
 RUN npm install mongodb-memory-server-global --save-dev
 
 RUN npm install && npm build
