--- a/DockerFile
+++ b/DockerFile
@@ -12,7 +12,11 @@ COPY globalConfig.json .
 
 RUN npm install -g jest
 RUN npm install mongodb-memory-server-global --save-dev
+RUN npm install -g nodemon
+RUN npm install -g dotenv
 
 RUN npm install && npm build
+
+EXPOSE 5000
 
 STOPSIGNAL SIGINT
