--- a/.github/workflows/nodejs.yaml
+++ b/.github/workflows/nodejs.yaml
@@ -5,8 +5,9 @@ on: push
 jobs:
   test:
     runs-on: ubuntu-latest
+    container:
+      image: node:15
     timeout-minutes: 15
-    container: node:latest
     services:
       mongo:
         image: mongo:latest
@@ -20,6 +21,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: install dependencies
+        run: npm install
       - name: in-memory-mongodb install
         run: npm install mongodb-memory-server-global --save-dev
       - name: Test node-server
@@ -29,6 +32,8 @@ jobs:
           PORT: 5000
           BCRYPT_SALT_ROUNDS: 12
           MONGO_DB_URL_DEVELOPMENT: mongodb://docker:docker@mongo:27017/casame?authSource=admin
+          MONGO_DB_URL_PRODUCTION: mongodb://docker:docker@mongo:27017/casame?authSource=admin
+          MONGO_DB_URL_TEST: mongodb://docker:docker@mongo:27017/casame?authSource=admin
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
           FB_CERT_TYPE: ${{ secrets.FB_CERT_TYPE }}
           FB_CERT_PROJECT_ID: ${{ secrets.FB_CERT_PROJECT_ID }}
