--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "firebase-admin": "^9.4.2",
     "helmet": "^4.2.0",
+    "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "loglevel": "^1.7.1",
     "mongoose": "^5.11.14",
