--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dev": "nodemon ./src/index.js"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
