--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "main": "./src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "jest --detectOpenHandles --runInBand --forceExit",
+    "test:watch": "jest --watch --detectOpenHandles --runInBand --forceExit",
     "dev": "nodemon ./src/index.js"
   },
   "dependencies": {
@@ -40,7 +40,6 @@
     "validator": "^13.5.2"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.15",
     "dotenv": "^8.2.0",
     "jest": "^26.6.3",
     "jest-environment-node": "^26.6.2",
