Ready to deploy (#39)
* feat: property schema defined (#24)

feat: property schemas & models defined and tested

fixes #14 #25

Co-authored-by: Damantino <garciadany12@gmail.com>
Co-authored-by: Mahmoud Mahmoud Abdelfattah <mahmoud.mostafa3107@gmail.com>

* Feat/Employee Model (#26)

feat: Admin Employee Model implemented and tested #27 #7 
Co-authored-by: Víctor Martínez <victorcoder2@gmail.com>

* fix: schema fix (#30)

* fix: schema fix and tests redefined

* feat: properties router, controller and tests structure defined (#31)

* feat: Search employee properties by filters (#32)

+ feat: Properties Routes, Controller & tests #17 #16 #12 
+ feat: search property by filters and join filters validation #15
+ feat: SeedTestDB #3 
+ feat: Employee Routes, Controller & tests #5 #6 #18 

Co-authored-by: Daniel <garciadany12@gmail.com>
Co-authored-by: Mahmoud Mahmoud Abdelfattah <mahmoud.mostafa3107@gmail.com>

* test: search property by filters (#36)

Closes #17 #12 #3 

Co-authored-by: Daniel <garciadany12@gmail.com>

* package-lock update

* Feat/remove employees properties (#35)

* Improved Delete Employee

* Joi Validation and fixed employee-controller

* better registration process

* Little Changes

* log removed

* some refactor on register and test warnings solved

added the flag --detectOpenHandles --runInBand
--forceExit to satisfy the tests warnings
Also, changed Model.remove for Model.deleteMany

Co-authored-by: Víctor Martínez <victorcoder2@gmail.com>

* bug fixes

* fix: bug fixes

* todo removed

* Fixed Stats Action

Co-authored-by: Damantino <garciadany12@gmail.com>
Co-authored-by: Mahmoud Mahmoud Abdelfattah <mahmoud.mostafa3107@gmail.com>

--- a/DockerFile
+++ b/DockerFile
@@ -6,9 +6,17 @@ WORKDIR /app
 
 COPY src /app/src/
 COPY package.json .
+COPY jest.config.js .
+COPY jsconfig.json .
+COPY globalConfig.json .
 
+RUN npm install -g jest
 RUN npm install mongodb-memory-server-global --save-dev
+RUN npm install -g nodemon
+RUN npm install -g dotenv
 
 RUN npm install && npm build
+
+EXPOSE 5000
 
 STOPSIGNAL SIGINT
