--- a/package.json
+++ b/package.json
@@ -17,22 +17,21 @@
   "main": "./src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "jest --detectOpenHandles --runInBand --forceExit",
+    "test:watch": "jest --watch --detectOpenHandles --runInBand --forceExit",
     "dev": "nodemon ./src/index.js"
   },
   "dependencies": {
-    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.4.2",
     "helmet": "^4.2.0",
+    "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "loglevel": "^1.7.1",
-    "mongoose": "^5.10.15",
+    "mongoose": "^5.11.14",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
@@ -41,7 +40,7 @@
     "validator": "^13.5.2"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.15",
+    "dotenv": "^8.2.0",
     "jest": "^26.6.3",
     "jest-environment-node": "^26.6.2",
     "mongodb-memory-server": "^6.9.3",
