Get employees by refererId

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,9 @@ MONGO_DB_URL_PRODUCTION=mongodb://docker:docker@mongo:27017/casame?authSource=ad
 MONGO_DB_URL_DEVELOPMENT=mongodb://docker:docker@mongo:27017/casame?authSource=admin
 MONGO_DB_URL_TEST=mongodb://docker:docker@mongo:27017/casame?authSource=admin
 BCRYPT_SALT_ROUNDS=
-JWT_SECRET=
+JWT_SECRET_PAYLOAD=
+JWT_SECRET_SIGN=
+STATIC_JWT=
 
 FB_CERT_TYPE=
 FB_CERT_PROJECT_ID=
